--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node_modules/.bin/cloudworker src/server/index.js"
+    "start": "node_modules/.bin/cloudworker dist/main.js"
   },
   "author": "Declan Cook",
   "license": "MIT",
